[package]
name = "nucleo-l476rg"
version = "0.0.1"
authors = ["Simon Berger <simberger@gmail.com>"]
description = "Examples for nucleo-l476rg board"
keywords = ["no-std", "stm32l4xx", "stm32l4", "embedded", "examples"]
categories = [
    "embedded",
    "no-std",
]
repository = "https://github.com/sim82/nucleo-476rg"
# readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]
edition = "2018"

[dependencies]
cortex-m = "^0.6"
nb = "^0.1"
as-slice = "^0.1"
generic-array = "^0.13"
stm32l4 = "^0.11"
smart-leds = "^0.3"
ws2812-spi = "^0.4"

[dependencies.stm32l4xx-hal]
git = "https://github.com/stm32-rs/stm32l4xx-hal.git"
branch = "master"
features = ["stm32l4x6"]


[dependencies.cast]
version  = "0.2.2"
default-features = false

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

# [dependencies.stm32-usbd]
# version = "0.5.0"
# features = ["ram_access_2x16"]
# optional = true

# [package.metadata.docs.rs]
# features = ["rt", "stm32l4x2", "stm32-usbd"]

# [features]
# rt = ["stm32l4/rt"]
# stm32l4x1 = ["stm32l4/stm32l4x1"]
# stm32l4x2 = ["stm32l4/stm32l4x2"]
# stm32l4x3 = ["stm32l4/stm32l4x3"]
# stm32l4x5 = ["stm32l4/stm32l4x5"]
# stm32l4x6 = ["stm32l4/stm32l4x6"]
# unproven = ["embedded-hal/unproven"]

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"
cortex-m-semihosting = "0.3.5"
cortex-m-rt = "0.6.12"
usb-device = "0.2.3"
usbd-serial = "0.1.0"
heapless = "0.5"
cortex-m-rtfm = "0.5"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

# #[[example]]
# #name = "usb_serial"
# #required-features = ["rt", "stm32l4x2", "stm32-usbd"]
# #
# #[[example]]
# #name = "qspi"
# #required-features = ["rt", "stm32l4x5"]
